--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bat&Wolf</title>
+    <link rel="stylesheet" href="css/Style.css">
 </head>
 <body>
-    
+    <div class="container"></div>
 </body>
 </html>
