--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <title>Bat&Wolf</title>
     <link rel="stylesheet" href="css/Style.css">
 </head>
-<body>
-    <div class="container"></div>
+<body class="container">
+  <header class="navbar">
+    <div class="logo">
+        <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="25px" height="25px" viewBox="0 0 500.000000 500.000000" preserveAspectRatio="xMidYMid meet">
+            <g transform="translate(0.000000,500.000000) scale(0.100000,-0.100000)" fill="#f3f3f3" stroke="none">
+            <path d="M2397 3546 c-32 -13 -65 -30 -75 -37 -50 -38 -88 -81 -122 -139 -44 -75 -62 -93 -113 -115 l-37 -15 -35 47 c-19 27 -45 75 -58 108 -14 32 -29 61 -35 63 -30 10 -91 -154 -92 -245 0 -59 -1 -62 -35 -83 -124 -77 -219 -277 -224 -473 -2 -93 16 -229 35 -254 12 -17 18 -16 93 24 44 24 82 43 85 43 3 0 -21 -54 -54 -121 -33 -68 -64 -149 -71 -185 -8 -39 -18 -64 -25 -64 -26 0 -130 44 -195 81 -197 114 -210 269 -38 454 35 38 57 66 49 63 -8 -3 -60 -18 -115 -33 -548 -153 -951 -503 -1121 -973 -42 -116 -43 -126 -6 -118 15 3 99 15 187 27 127 17 190 20 305 16 169 -7 258 -24 355 -70 132 -64 225 -178 241 -298 4 -27 8 -49 11 -49 2 0 26 11 52 25 84 42 186 65 291 65 155 0 269 -37 422 -135 96 -62 287 -255 368 -372 l64 -93 25 43 c132 221 331 422 504 506 200 99 463 89 647 -22 l55 -33 11 75 c6 42 21 98 34 124 52 111 177 191 345 222 122 23 400 16 569 -14 66 -12 121 -19 124 -16 3 3 -6 53 -21 113 -90 364 -365 656 -821 872 -118 56 -354 145 -363 136 -2 -2 11 -25 28 -51 55 -82 78 -151 79 -234 0 -93 -22 -143 -92 -206 -44 -40 -178 -115 -204 -115 -5 0 -17 34 -26 75 -9 41 -42 126 -72 190 -30 63 -52 115 -49 115 2 0 40 -19 83 -42 60 -33 82 -40 91 -31 18 18 41 219 34 296 -17 184 -105 360 -215 433 -37 24 -40 30 -40 71 0 92 -58 254 -93 261 -9 2 -17 -2 -17 -10 0 -22 -55 -131 -84 -165 -15 -18 -36 -33 -47 -33 -38 0 -87 44 -130 118 -79 134 -174 194 -319 199 -72 3 -94 0 -143 -21z m-256 -1003 c30 -32 81 -90 112 -129 50 -62 57 -77 57 -115 0 -51 18 -92 43 -97 12 -3 19 5 23 27 8 37 9 37 65 12 28 -13 38 -22 29 -25 -103 -35 -118 -37 -169 -32 -65 8 -128 34 -158 68 -30 31 -62 126 -73 212 -8 68 -4 136 10 136 4 0 31 -26 61 -57z m849 -16 c0 -77 -18 -162 -49 -233 -25 -55 -80 -91 -160 -105 -52 -10 -73 -8 -131 7 -39 10 -70 21 -70 24 0 4 19 15 43 25 23 10 45 20 50 23 4 2 7 -5 7 -16 0 -31 11 -52 26 -52 24 0 45 46 46 100 0 47 5 57 50 113 61 74 169 187 180 187 4 0 8 -33 8 -73z m-701 -476 c14 -9 7 -51 -9 -51 -10 0 -30 33 -30 49 0 13 20 14 39 2z m521 4 c0 -4 -7 -20 -17 -38 l-16 -32 -13 30 c-10 26 -10 31 4 37 21 8 42 10 42 3z m-470 -25 c0 -5 -4 -10 -10 -10 -5 0 -10 5 -10 10 0 6 5 10 10 10 6 0 10 -4 10 -10z m400 6 c0 -3 -4 -8 -10 -11 -5 -3 -10 -1 -10 4 0 6 5 11 10 11 6 0 10 -2 10 -4z"/>
+            </g>
+            </svg>
+        <span>BATYWOLF</span>
+    </div>
+    <nav class="nav-links">
+        <a href=""></a>
+    </nav>
+    <!--Aqui va la barra negra de arriba-->
+  </header>
+  <!--Aqui va lo del medio-->
+  <footer>
+     <!--Aqui va lo de abajo-->
+  </footer>
+ 
     <!--https://uiverse.io/kandalgaonkarshubham/lovely-donkey-52-->
 </body>
 </html>
