--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <span style="color: white;">No me jodo, que si te vas a joder </span>
     </div>
     <nav class="nav-links">
-        <a href=""></a>
+        <a href="index.html">INICIO</a>
+        <a href="html/juego.html">JUEGOS</a>
+        <a href="#">COMUNIDAD</a>
+        <a href="#">SOBRE NOSOTROS</a>
     </nav>
     <!--Aqui va la barra negra de arriba-->
   </header>
