--- a/html/games.html
+++ b/html/games.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bat&Wolf</title>
-    <link rel="icon" href="images/Icon.png">
-    <link rel="stylesheet" href="css/Style.css">
+    <title>Bat&Wolf | JUEGOS</title>
+    <link rel="icon" href="../images/Icon.png">
+    <link rel="stylesheet" href="../css/Style.css">
 </head>
 <body class="container">
-  <header class="navbar">
+<header class="navbar">
     <div class="logo">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="70pt" height="70pt" viewBox="0 -1000 1000.000000 1000.000000" preserveAspectRatio="xMidYMid meet">
             <g transform="scale(0.100000,-0.100000)" fill="#f3f3f3" stroke="none">
@@ -18,18 +18,10 @@
         <span style="color: white;">BAT&WOLF</span>
     </div>
     <nav class="nav-links">
-        <a href="index.html">INICIO</a>
-        <a href="html/games.html">JUEGOS</a>
-        <a href="html/comunity.html">COMUNIDAD</a>
-        <a href="html/about-us.html">SOBRE NOSOTROS</a>
+        <a href="../index.html">INICIO</a>
+        <a href="games.html">JUEGOS</a>
+        <a href="comunity.html">COMUNIDAD</a>
+        <a href="about-us.html">SOBRE NOSOTROS</a>
     </nav>
-    <!--Aqui va la barra negra de arriba-->
-  </header>
-  <!--Aqui va lo del medio-->
-  <footer>
-     <!--Aqui va lo de abajo-->
-  </footer>
- 
-    <!--https://uiverse.io/kandalgaonkarshubham/lovely-donkey-52-->
 </body>
 </html>
