--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bat&Wolf</title>
+    <title>Bat&Wolfy</title>
     <link rel="icon" href="images/Icon.png">
     <link rel="stylesheet" href="css/Style.css">
 </head>
@@ -26,6 +26,7 @@
     <!--Aqui va la barra negra de arriba-->
   </header>
   <!--Aqui va lo del medio-->
+  <div class="picture"><img src="images/index-photo.png"> </div>
   <footer>
      <!--Aqui va lo de abajo-->
   </footer>
