--- a/tienda.html
+++ b/tienda.html
@@ -26,7 +26,7 @@
     
   </header><!--Aqui va la barra negra de arriba-->
 
-  <main class="main-tienda" >
+  <main class="main-tienda gradient-background" >
     <section class="Productos">
         <a href="#" class="tienda">
             <div class="card">
