--- a/trabajaconnosotros.html
+++ b/trabajaconnosotros.html
@@ -26,7 +26,7 @@
     
   </header><!--Aqui va la barra negra de arriba-->
 
-  <main class="main-princ">
+  <main class="main-trabajo">
     <div class="form-section">
         <div class="form-container">
             <p class="title">Trabaja con nosotros</p>
