--- a/tienda.html
+++ b/tienda.html
@@ -45,7 +45,7 @@
                     <img src="images/Placeholder/GOW_cover_1.png" class="cover-image" />
                 </div>
                 <img src="images/Placeholder/GOW_tittle_1.png" class="title" />
-                <img src="images/Placeholder/kratos_character_1.png" class="character" />
+                <img src="images/Placeholder/kratos_character_2.png" class="character" />
             </div>
             €00,00
         </a>
@@ -55,27 +55,6 @@
                     <img src="images/Placeholder/GOW_cover_2.png" class="cover-image" />
                 </div>
                 <img src="images/Placeholder/GOW_ttile_2.png" class="title" />
-                <img src="images/Placeholder/kratos_character_2.png" class="character" />
-            </div>
-            €00,00
-        </a>
-        <a href="#" class="tienda">
-            <div class="card">
-                <div class="wrapper">
-                    <img src="images/Placeholder/dark_rider-cover.jpg" class="cover-image" />
-                </div>
-                <img src="images/Placeholder/dark_rider-title.png" class="title" />
-                <img src="images/Placeholder/dark_rider-character.webp" class="character" />
-            </div>
-            €00,00
-        </a>
-     
-        <a href="#" class="tienda">
-            <div class="card">
-                <div class="wrapper">
-                    <img src="images/Placeholder/GOW_cover_1.png" class="cover-image" />
-                </div>
-                <img src="images/Placeholder/GOW_tittle_1.png" class="title" />
                 <img src="images/Placeholder/kratos_character_1.png" class="character" />
             </div>
             €00,00
@@ -83,20 +62,10 @@
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/GOW_cover_2.png" class="cover-image" />
+                    <img src="images/Placeholder/mario_kart_8_switch-caratula.png" class="cover-image" />
                 </div>
-                <img src="images/Placeholder/GOW_ttile_2.png" class="title" />
-                <img src="images/Placeholder/kratos_character_2.png" class="character" />
-            </div>
-            €00,00
-        </a>
-        <a href="#" class="tienda">
-            <div class="card">
-                <div class="wrapper">
-                    <img src="images/Placeholder/dark_rider-cover.jpg" class="cover-image" />
-                </div>
-                <img src="images/Placeholder/dark_rider-title.png" class="title" />
-                <img src="images/Placeholder/dark_rider-character.webp" class="character" />
+                <img src="images/Placeholder/logo-mk8.png" class="title" />
+                <img src="images/Placeholder/Mariokart.png" class="character" />
             </div>
             €00,00
         </a>
@@ -104,30 +73,30 @@
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/GOW_cover_1.png" class="cover-image" />
+                    <img src="images/Placeholder/Uncharted-caratula.png" class="cover-image" />
                 </div>
-                <img src="images/Placeholder/GOW_tittle_1.png" class="title" />
-                <img src="images/Placeholder/kratos_character_1.png" class="character" />
+                <img src="images/Placeholder/Uncharted_4_A_Thief's_End_Logo.png" class="title" />
+                <img src="images/Placeholder/Nathan_Drake.png" class="character" />
             </div>
             €00,00
         </a>
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/GOW_cover_2.png" class="cover-image" />
+                    <img src="images/Placeholder/TLOZ_BOTW.png" class="cover-image" />
                 </div>
-                <img src="images/Placeholder/GOW_ttile_2.png" class="title" />
-                <img src="images/Placeholder/kratos_character_2.png" class="character" />
+                <img src="images/Placeholder/Zelda_Breath_of_the_Wild_BotW_Logo.png" class="title" />
+                <img src="images/Placeholder/Link_BOTW.png" class="character" />
             </div>
             €00,00
         </a>
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/dark_rider-cover.jpg" class="cover-image" />
+                    <img src="images/Placeholder/Sonic-Frontiers-Caratula.png" class="cover-image" />
                 </div>
-                <img src="images/Placeholder/dark_rider-title.png" class="title" />
-                <img src="images/Placeholder/dark_rider-character.webp" class="character" />
+                <img src="images/Placeholder/frontiers_Logo.png" class="title" />
+                <img src="images/Placeholder/Sonic.png" class="character" />
             </div>
             €00,00
         </a>
@@ -135,10 +104,41 @@
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/GOW_cover_1.png" class="cover-image" />
+                    <img src="images/Placeholder/Hollow-Knight-Caratula.png" class="cover-image" />
                 </div>
-                <img src="images/Placeholder/GOW_tittle_1.png" class="title" />
-                <img src="images/Placeholder/kratos_character_1.png" class="character" />
+                <img src="images/Placeholder/Hollow_Knight_Logo.png" class="title" />
+                <img src="images/Placeholder/The_Knight.png" class="character" />
+            </div>
+            €00,00
+        </a>
+        <a href="#" class="tienda">
+            <div class="card">
+                <div class="wrapper">
+                    <img src="images/Placeholder/SSBU-Caratula.png" class="cover-image" />
+                </div>
+                <img src="" class="title" />
+                <img src="images/Placeholder/Mario_SSBU.png" class="character" />
+            </div>
+            €00,00
+        </a>
+        <a href="#" class="tienda">
+            <div class="card">
+                <div class="wrapper">
+                    <img src="images/Placeholder/Stray-caratula.png" class="cover-image" />
+                </div>
+                <img src="images/Placeholder/Stray-logo.png" class="title" />
+                <img src="images/Placeholder/Gato-stray.png" class="character" />
+            </div>
+            €00,00
+        </a>
+     
+        <a href="#" class="tienda">
+            <div class="card">
+                <div class="wrapper">
+                    <img src="images/Placeholder/Spider-Man_Caratula.png" class="cover-image" />
+                </div>
+                <img src="images/Placeholder/Spider-Man_Logo.png" class="title" />
+                <img src="images/Placeholder/Spider-man.png" class="character" />
             </div>
             €00,00
         </a>
