--- a/tienda.html
+++ b/tienda.html
@@ -116,7 +116,7 @@
                 <div class="wrapper">
                     <img src="images/Placeholder/SSBU-Caratula.png" class="cover-image" />
                 </div>
-                <img src="" class="title" />
+                <img src="images/Placeholder/SSBU-Logo.png" class="title" />
                 <img src="images/Placeholder/Mario_SSBU.png" class="character" />
             </div>
             €00,00
