--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -19,9 +19,9 @@
     </div>
     <nav class="nav-links">
         <a class="actual-position" href="#">INICIO</a>
-        <a href="#">TIENDA</a>
-        <a href="#">COMUNIDAD</a>
-        <a href="#">SOBRE NOSOTROS</a>
+        <a href="tienda.html">TIENDA</a>
+        <a href="comunidad.html">COMUNIDAD</a>
+        <a href="sobrenosotros.html">SOBRE NOSOTROS</a>
     </nav>
     
   </header><!--Aqui va la barra negra de arriba-->
