Cambios en Trabajo

--- a/trabajaconnosotros.html
+++ b/trabajaconnosotros.html
@@ -27,27 +27,32 @@
   </header><!--Aqui va la barra negra de arriba-->
 
   <main class="main-trabajo">
-    <div class="form-section">
-        <div class="form-container">
-            <p class="title">Trabaja con nosotros</p>
-            <form class="form">
-                <div class="input-group">
-                <label for="name">Nombre</label>
-                <input placeholder="" id="username" name="username" type="text" />
-                </div>
-                <div class="input-group">
-                <label for="phone">Telefono</label>
-                <input placeholder="" id="phone" name="phone" type="phone" />
-                <label for="email">Correo</label>
-                <input placeholder="" id="email" name="email" type="email" />
-                <label for="file">Curriculum</label>
-                <input type="file">
-                </div>
-                <button style="margin-top:6%;" class="sign">Submit</button>
-            </form>
+    <div class="form-box">
+        <div class="form-value">
+          <form action="">
+            <h2>Trabaja con nosotros</h2>
+            <div class="inputbox">
+              <input type="name" required>
+              <label for="">Nombre y apellidos</label>
             </div>
+            <div class="inputbox">
+              <input type="phone" required>
+              <label for="">Numero de telefono</label>
+            </div>
+            <div class="inputbox">
+              <input type="email" required>
+              <label for="">Correo electronico</label>
+            </div>
+            <div class="inputbox">
+                <label for="">Curriculum</label>
+                <input type="file" required>
+              </div>
+            <div class="forget">
+            </div>
+            <button>Siguente</button>
+          </form>
         </div>
-    </div>
+      </div>
   </main>  <!--Aqui va lo del medio-->
 
 
