--- a/trabajaconnosotros.html
+++ b/trabajaconnosotros.html
@@ -45,7 +45,7 @@
             </div>
             <div class="inputbox">
                 <label for="">Curriculum</label>
-                <input type="file" required>
+                <input type="file" id="archivo" name="archivo" required>
               </div>
             <div class="forget">
             </div>
