subo nuevo en tienda

--- a/tienda.html
+++ b/tienda.html
@@ -142,7 +142,16 @@
             </div>
             €00,00
         </a>
-        
+        <a href="#" class="tienda">
+            <div class="card">
+                <div class="wrapper">
+                    <img src="images/Placeholder/spiderman 2 fondo.avif" class="cover-image" />
+                </div>
+                <img src="images/Placeholder/spiderman 2 titulo.png" class="title" />
+                <img src="images/Placeholder/spiderman 2 venom.png" class="character" />
+            </div>
+            €00,00
+        </a>
         
     </section>
    
