subo cambios en tienda

--- a/tienda.html
+++ b/tienda.html
@@ -31,10 +31,10 @@
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/dark_rider-cover.jpg" class="cover-image" />
+                    <img src="images/Placeholder/ghost_of_tsushima.jpg" class="cover-image" />
                 </div>
-                <img src="images/Placeholder/dark_rider-title.png" class="title" />
-                <img src="images/Placeholder/dark_rider-character.webp" class="character" />
+                <img src="images/Placeholder/321-3216182_ghost-logo-png.png" class="title" />
+                <img src="images/Placeholder/description-floating-GoT.png" class="character" />
             </div>
             €00,00
         </a>
@@ -145,7 +145,7 @@
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/spiderman 2 fondo.avif" class="cover-image" />
+                    <img src="images\Placeholder\spiderman 2 fondo.jpg" class="cover-image" />
                 </div>
                 <img src="images/Placeholder/spiderman 2 titulo.png" class="title" />
                 <img src="images/Placeholder/spiderman 2 venom.png" class="character" />
