--- a/tienda.html
+++ b/tienda.html
@@ -31,7 +31,7 @@
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images/Placeholder/ghost_of_tsushima.jpg" class="cover-image" />
+                    <img src="images/Placeholder/fondoGOT.png" class="cover-image" />
                 </div>
                 <img src="images/Placeholder/321-3216182_ghost-logo-png.png" class="title" />
                 <img src="images/Placeholder/description-floating-GoT.png" class="character" />
@@ -145,7 +145,7 @@
         <a href="#" class="tienda">
             <div class="card">
                 <div class="wrapper">
-                    <img src="images\Placeholder\spiderman 2 fondo.jpg" class="cover-image" />
+                    <img src="images\Placeholder/spiderman 2 fondo.png" class="cover-image" />
                 </div>
                 <img src="images/Placeholder/spiderman 2 titulo.png" class="title" />
                 <img src="images/Placeholder/spiderman 2 venom.png" class="character" />
