--- a/comunidad.html
+++ b/comunidad.html
@@ -37,7 +37,7 @@
                         Somos una comunidad nueva que se preocupa por sus integrantes
                     </li>
                     <li>
-                        ¡Sorteamos juegos!
+                        Somos sostenibles por cada venta de juego plantamos arbol en <a href="https://bosquia.com">Bosquia</a>
                     </li>
                     <li>
                         Hacemos torneos de diferentes juegos
@@ -61,7 +61,7 @@
                         Canales para que juegues con otros miembros de la comunidad
                     </li>
                     <li>
-                        Conce gente nueva
+                        Por cada 10 integrantes nuevos plantamos un arbol en <a href="https://bosquia.com">Bosquia</a>
                     </li>
                     <li>
                         ¡Conoce a los desarrolladores!
