--- a/tienda.html
+++ b/tienda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bat&Wolf</title>
+    <title>Bat&Wolf | Tienda</title>
     <link rel="stylesheet" href="css/Style.css">
     <link rel="icon" href="images/Icon.png">
 </head>
