--- a/ubicacion.html
+++ b/ubicacion.html
@@ -38,10 +38,10 @@
                         Nos ubicamos en Puertollano, provincia de Ciudad Real
                     </li>
                     <li>
-                        Realizada en CIFP Virgen de Gracia
+                        Realizado todo en el CIFP Virgen de Gracia
                     </li>
                     <li>
-                        
+                        Donde tenemos a los mejores profesores y profesionales del sector
                     </li>
                     <li>
                         ¡Conoce a los desarrolladores!
