--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -18,10 +18,10 @@
           <span class="Titulo" >BAT&WOLF </span>
       </div>
       <nav class="nav-links">
-        <a class="actual-position" href="index.html">INICIO</a>
+        <a href="index.html">INICIO</a>
         <a href="tienda.html">TIENDA</a>
         <a href="comunidad.html">COMUNIDAD</a>
-        <a href="sobrenosotros.html">SOBRE NOSOTROS</a>
+        <a class="actual-position" href="sobrenosotros.html">SOBRE NOSOTROS</a>
       </nav>
       
     </header><!--Aqui va la barra negra de arriba-->
